Bolder prototype. AFSK failure.

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,27 +13,25 @@ default_envs = vhf_band
 
 [env]
 platform = espressif32
-framework = arduino
+framework = espidf
 upload_speed = 921600
 monitor_speed = 115200
 monitor_dtr = 1
 monitor_rts = 1
 board = esp32s3box
-;monitor_filters =
-;	default
-;	esp32_exception_decoder
 lib_deps = 
 	olikraus/U8g2@^2.35.3
 	lewisxhe/XPowersLib @ ^0.1.7
+	adafruit/Adafruit NeoPixel @ ^1.11.0
 
 [env:vhf_band]
-build_flags =
+build_flags = 
 	-DBOARD_HAS_PSRAM
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-DVHF_BAND=1
 
 [env:vhf_band_debug]
-build_flags =
+build_flags = 
 	-DBOARD_HAS_PSRAM
 	-DCORE_DEBUG_LEVEL=3
 	-DARDUINO_USB_CDC_ON_BOOT=1
